video/closedcaption/src/ffi.rs

pub const eia608_control_t_eia608_tab_offset_0: eia608_control_t = 5920;
pub const eia608_control_t_eia608_tab_offset_1: eia608_control_t = 5921;
pub const eia608_control_t_eia608_tab_offset_2: eia608_control_t = 5922;
pub const eia608_control_t_eia608_tab_offset_3: eia608_control_t = 5923;
pub const eia608_control_t_eia608_control_resume_caption_loading: eia608_control_t = 5152;
pub const eia608_control_t_eia608_control_backspace: eia608_control_t = 5153;
pub const eia608_control_t_eia608_control_alarm_off: eia608_control_t = 5154;
pub const eia608_control_t_eia608_control_alarm_on: eia608_control_t = 5155;
pub const eia608_control_t_eia608_control_delete_to_end_of_row: eia608_control_t = 5156;
pub const eia608_control_t_eia608_control_roll_up_2: eia608_control_t = 5157;
pub const eia608_control_t_eia608_control_roll_up_3: eia608_control_t = 5158;
pub const eia608_control_t_eia608_control_roll_up_4: eia608_control_t = 5159;
pub const eia608_control_t_eia608_control_resume_direct_captioning: eia608_control_t = 5161;
pub const eia608_control_t_eia608_control_text_restart: eia608_control_t = 5162;
pub const eia608_control_t_eia608_control_text_resume_text_display: eia608_control_t = 5163;
pub const eia608_control_t_eia608_control_erase_display_memory: eia608_control_t = 5164;
pub const eia608_control_t_eia608_control_carriage_return: eia608_control_t = 5165;
pub const eia608_control_t_eia608_control_erase_non_displayed_memory: eia608_control_t = 5166;
pub const eia608_control_t_eia608_control_end_of_caption: eia608_control_t = 5167;
pub type eia608_control_t = u32;
extern "C" {
    pub fn eia608_control_command(cmd: eia608_control_t, cc: ::std::os::raw::c_int) -> u16;
}
extern "C" {
    pub fn eia608_parse_control(cc_data: u16, cc: *mut ::std::os::raw::c_int) -> eia608_control_t;
}
extern "C" {
    pub fn eia608_from_utf8_1(c: *const utf8_char_t, chan: ::std::os::raw::c_int) -> u16;
}
extern "C" {
    pub fn eia608_from_utf8_2(c1: *const utf8_char_t, c2: *const utf8_char_t) -> u16;
}
extern "C" {
    pub fn eia608_from_basicna(bna1: u16, bna2: u16) -> u16;
}
extern "C" {
    pub fn eia608_to_utf8(
        c: u16,
        chan: *mut ::std::os::raw::c_int,
        char1: *mut utf8_char_t,
        char2: *mut utf8_char_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn eia608_dump(cc_data: u16);
}
extern "C" {
    pub fn eia608_to_text(
        buf: *mut ::std::os::raw::c_char,
        s: usize,
        cc_data: u16,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct xds_t {
    pub state: ::std::os::raw::c_int,
    pub class_code: u8,
    pub type_: u8,
    pub size: u32,
    pub content: [u8; 32usize],
    pub checksum: u8,
}
extern "C" {
    pub fn xds_init(xds: *mut xds_t);
}
extern "C" {
    pub fn xds_decode(xds: *mut xds_t, cc: u16) -> ::std::os::raw::c_int;
}
pub const libcaption_stauts_t_LIBCAPTION_ERROR: libcaption_stauts_t = 0;
pub const libcaption_stauts_t_LIBCAPTION_OK: libcaption_stauts_t = 1;
pub const libcaption_stauts_t_LIBCAPTION_READY: libcaption_stauts_t = 2;
pub const libcaption_stauts_t_LIBCAPTION_CLEAR: libcaption_stauts_t = 3;
pub type libcaption_stauts_t = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct caption_frame_cell_t {
    pub uln: u8,
    pub sty: u8,
    pub data: [utf8_char_t; 5usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct caption_frame_buffer_t {
    pub cell: [[caption_frame_cell_t; 32usize]; 15usize],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct caption_frame_state_t {
    pub uln: u8,
    pub sty: u8,
    pub rup: u8,
    pub row: i8,
    pub col: i8,
    pub cc_data: u16,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct caption_frame_t {
    pub timestamp: f64,
    pub xds: xds_t,
    pub state: caption_frame_state_t,
    pub front: caption_frame_buffer_t,
    pub back: caption_frame_buffer_t,
    pub write: *mut caption_frame_buffer_t,
    pub status: libcaption_stauts_t,
}
extern "C" {
    pub fn caption_frame_init(frame: *mut caption_frame_t);
}
extern "C" {
    pub static _caption_frame_rollup: [::std::os::raw::c_int; 4usize];
}
extern "C" {
    pub fn caption_frame_write_char(
        frame: *mut caption_frame_t,
        row: ::std::os::raw::c_int,
        col: ::std::os::raw::c_int,
        style: eia608_style_t,
        underline: ::std::os::raw::c_int,
        c: *const utf8_char_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn caption_frame_read_char(
        frame: *mut caption_frame_t,
        row: ::std::os::raw::c_int,
        col: ::std::os::raw::c_int,
        style: *mut eia608_style_t,
        underline: *mut ::std::os::raw::c_int,
    ) -> *const utf8_char_t;
}
extern "C" {
    pub fn caption_frame_decode(
        frame: *mut caption_frame_t,
        cc_data: u16,
        timestamp: f64,
    ) -> libcaption_stauts_t;
}
extern "C" {
    pub fn caption_frame_from_text(
        frame: *mut caption_frame_t,
        data: *const utf8_char_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn caption_frame_to_text(
        frame: *mut caption_frame_t,
        data: *mut utf8_char_t,
        full: ::std::os::raw::c_int,
    ) -> usize;
}
extern "C" {
    pub fn caption_frame_dump_buffer(frame: *mut caption_frame_t, buf: *mut utf8_char_t) -> usize;
}
extern "C" {
    pub fn caption_frame_dump(frame: *mut caption_frame_t);
}
